# card-game-haskell

./: CHANGELOG.md  Readme.md  cards-haskell.cabal
app/: Main.hs
src/Game/: Blackjack.hs
src/Game/Card/: Deck.hs  German.hs  Spanish.hs  Standard.hs  Types.hs
